--- a/mi_app/templates/home.html
+++ b/mi_app/templates/home.html
@@ -49,7 +49,7 @@
 
         <div class="jumbotron p-5 d-flex bg-light">
             <div class="container-fluid">
-                <h1 class="display-2">Mis Motos</h1>
+                <h1 class="display-2">{{moto}}</h1>
                 <p class="lead">This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
                 <button type="button" class="btn btn-primary">Learn More »</button>
             </div>
