--- a/random_words/templates/index.html
+++ b/random_words/templates/index.html
@@ -48,7 +48,7 @@
         </nav>
         <div class="container style="opacity: 10%; background-image: url(https://st.depositphotos.com/1025674/1715/v/950/depositphotos_17155901-stock-illustration-time-background.jpg); background-size:cover; background-position: center; background-repeat: no-repeat">
             <div class="row text-center justify-content-between mx-4">
-                <h2 class="text-primary text-cemter">La hora actual en:</h2>
+                <h2 class="text-secondary text-cemter">Random Numbers:</h2>
                     <br><br><br>
                     <div class="col-4 text-center">
                         <div class="card" style="width: 18rem;">
