--- a/random_words/templates/index.html
+++ b/random_words/templates/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>Que Hora'Son?</title>
+    <title>Generador de contraseña</title>
 
 </head>
-    <body style="opacity: 70%; background-image: url(https://images.freecreatives.com/wp-content/uploads/2015/12/Grey-Washed-Wall-Seamless-Pattern.jpg); background-size:cover; background-position: center; background-repeat: repeat">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <body class="bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="random">User: {{request.session.name}}</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,10 +28,9 @@
         </nav>
         <div class="container">
             <div class="row text-center justify-content-between">
-                <h2 class="text-light text-center my-3">Random Password</h2>
-                    <br><br><br>
-                    <div class="col-3"></div>
-                    <div class="col-6 text-center justify-content-center">
+                <h2 class="text-light text-center my-3">Password</h2>
+                    <div class="col-4"></div>
+                    <div class="col-4 justify-content-between">
                         <div class="card" style="width: 80%;">
                             <img id="ruleta" src="https://i.pinimg.com/originals/f1/69/37/f16937aee1202bcba272a69845d55c99.gif" class="card-img-top" alt="image">
                             <div class="card-body">
@@ -39,10 +38,11 @@
                                 <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
                                 <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
                                 <a href="reset" class="btn btn-danger my-2">Reset Counter</a>
+                                <a href="login" class="btn btn-success my-2">Volver al Login</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-3"></div>
+                    <div class="col-4"></div>
             </div>
         </div>
     
