--- a/ninja_gold/templates/ninja_gold.html
+++ b/ninja_gold/templates/ninja_gold.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="shortcut icon" href="templates/favicon.png">
     <title>Login</title>
 <!-- HAY QUE ARREGLAR LA BARRA QUE MUESTRA LA INFORMACIÓN, CORREGIR LOS BOTONES Y HACER EL VIEWS.PY-->
 <!-- ESTA LISTO EL TEMPLATE DE LOGIN Y EL TEMPLATE DE JUEGO, PERO FALTA ARREGLAR COSAS PEQUEÑAS-->
@@ -13,66 +14,93 @@
     <body style="background-image: url(https://wallpaperaccess.com/full/979426.jpg); background-size:100%; background-repeat:no-repeat">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity:0.8">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" href="random"> {{request.session.name}} <span class="text-warning">{{request.session.gold}} Gold</span></a>
+                <a class="navbar-brand" href="index.html">
+                <img src="https://i.pinimg.com/originals/22/d7/5c/22d75c0d80de731413ef90c2e0fd8f95.gif" alt="" width="24" height="24" class="d-inline-block align-text-top"> {{request.session.name}} <span class="{% if request.session.hp <= 0 %} text-danger {% elif request.session.hp < 11 %} text-warning {% endif %} text-success fw-bold">{{request.session.hp}} HP</span></a>
+                <form action ="/reborn" method='POST'>
+                    {% csrf_token %}
+                    <input type="hidden">
+                    <button class="btn btn-danger my-2" type="submit">Reset</button>
+                </form>
             </div>
         </nav>
         <div class="row m-3">
-            <div class="col-2 justify-content-between my-3" style="opacity:0.8">
-                <div class="card">
-                    <img id="ruleta" src="https://static.wikia.nocookie.net/jutsupedia/images/5/58/Jutsu_Clon_de_Sombra.gif/revision/latest?cb=20120111144419&path-prefix=es" class="card-img-top" alt="image">
+            <div class="col-2 justify-content-between my-3">
+                <div class="card bg-dark" style="opacity:0.8">
+                    <img id="ruleta" src="https://media2.giphy.com/media/rrTXn4zEMp008/200.gif" class="card-img-top" alt="image">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Jutsu clones de sombra <span class="text-success">{{randomword}}</span></h5>
-                        <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
-                        <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
+                        <h5 class="card-title text-center text-light">Copy Ninja</h5>
+                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 10-20</span> HP</h5>
+                        <form action ="/process_money" method='POST'>
+                            {% csrf_token %}
+                            <input type="hidden" name="ninja" value="kakashi">
+                            <button class="btn btn-secondary my-2" type="submit">A jugar</button>
+                        </form>
                     </div>
                 </div>
             </div>
             
-            <div class="col-2 justify-content-between my-3" style="opacity:0.8">
-                <div class="card">
+            <div class="col-2 justify-content-between my-3">
+                <div class="card bg-dark" style="opacity:0.8">
                     <img id="ruleta" src="https://static.wikia.nocookie.net/jutsupedia/images/d/d2/Elemento_Fuego_Jutsu_Gran_Bola_de_Fuego.gif/revision/latest?cb=20120106141858&path-prefix=es" class="card-img-top" alt="image">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Jutsu Bola de Fuego <span class="text-success">{{randomword}}</span></h5>
-                        <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
-                        <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
+                        <h5 class="card-title text-center text-light">Fire Ball</h5>
+                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 05-10</span> HP</h5>
+                        <form action ="/process_money" method='POST'>
+                            {% csrf_token %}
+                            <input type="hidden" name="ninja" value="saske">
+                            <button class="btn btn-secondary my-2" type="submit">A jugar</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="row m-3">
-            <div class="col-2 justify-content-between my-3" style="opacity:0.8">
-                <div class="card">
-                    <img id="ruleta" src="https://media2.giphy.com/media/rrTXn4zEMp008/200.gif" class="card-img-top" alt="image">
+            <div class="col-2 justify-content-between my-3">
+                <div class="card bg-dark" style="opacity:0.8">
+                    <img id="ruleta" src="https://static.wikia.nocookie.net/jutsupedia/images/5/58/Jutsu_Clon_de_Sombra.gif/revision/latest?cb=20120111144419&path-prefix=es" class="card-img-top" alt="image">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Copy-Ninja <span class="text-success">{{randomword}}</span></h5>
-                        <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
-                        <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
+                        <h5 class="card-title text-center text-light">Shadow Clones</h5>
+                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 02-05</span> HP</h5>
+                        <form action ="/process_money" method='POST'>
+                            {% csrf_token %}
+                            <input type="hidden" name="ninja" value="naruto1">
+                            <button class="btn btn-secondary my-2" type="submit">A jugar</button>
+                        </form>
                     </div>
                 </div>
             </div>
             
-            <div class="col-2 justify-content-between my-3" style="opacity:0.8">
-                <div class="card">
+            <div class="col-2 justify-content-between my-3">
+                <div class="card bg-dark" style="opacity:0.8">
                     <img id="ruleta" src="https://media.tenor.com/images/2525d6f4776cdb2665c4a21e53d55cd9/tenor.gif" class="card-img-top" alt="image">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Jutsu Sexy <span class="text-success">{{randomword}}</span></h5>
-                        <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
-                        <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
+                        <h5 class="card-title text-center text-light">Jutsu Sexy</h5>
+                        <h5 class="text-center text-light">Earn/Take <span class="card-title fw-bold text-warning" id="counter"> 0-50</span> HP</h5>
+                        <form action ="/process_money" method='POST'>
+                            {% csrf_token %}
+                            <input type="hidden" name="ninja" value="naruto2">
+                            <button class="btn btn-secondary my-2" type="submit" id="button">A jugar</button>
+                        </form>
                     </div>
                 </div>
             </div>
 
             <div class="col-8 float-end my-3" style="opacity:0.8">
                 <div class="card">
-                    <div data-bs-spy="scroll" class="card-body">
-                        <h5 class="card-title">Informacion <span class="text-success">{{randomword}}</span></h5>
-                        <h5>Counter: <span class="card-title {% if request.session.counter == 10 %} text-danger {% else %} text-success {% endif%}" id="counter">{{request.session.counter}}</span></h5>
-                        <a href="random" class="btn btn-primary my-2 {% if request.session.counter == 10 %} disabled {% endif%}" aria-disabled="true">Actualizar</a>
+                    <h4 class="card-title bg-light text-dark text-center m-0 py-2">Information Register</h4>
+                    <div data-bs-spy="scroll" class="card-body bg-light" style="height: 300px; overflow-y: scroll" id="actions">
+                        {% for message in request.session.messages %}
+                            <h5 class="text-dark">{{message}} </h5>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
-
         </div>
+        
     </body>
+    <script>
+        const actions = document.getElementById('actions')
+        actions.scrollTo(0, actions.scrollHeight)
+    </script>
 </html>
