--- a/ninja_gold/templates/ninja_login.html
+++ b/ninja_gold/templates/ninja_login.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="shortcut icon" href="favicon.png">
     <title>Login</title>
 
 </head>
     <body style="background-image: url(https://pavbca.com/walldb/original/3/8/e/271057.jpg); background-size:100%; background-repeat:no-repeat">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity:0.8">
             <div class="container-fluid">
-                <a class="navbar-brand text-warning" href="random">{% if request.session.name == 'error'%} Guest {% else %} User: {{request.session.name}}{% endif%}</a>
+                <a class="navbar-brand" href="index.html">
+                <img src="https://i.pinimg.com/originals/22/d7/5c/22d75c0d80de731413ef90c2e0fd8f95.gif" alt="" width="24" height="24" class="d-inline-block align-text-top">{% if request.session.name == 'error'%} Guest {% else %} User: {{request.session.name}}{% endif%}</a>
             </div>
         </nav>
         <div class="row text-center justify-content-between">
