--- a/ninja_gold/templates/ninja_gold.html
+++ b/ninja_gold/templates/ninja_gold.html
@@ -6,30 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="shortcut icon" href="templates/favicon.png">
+    <link rel="icon"  type="image/gif" href="https://i.pinimg.com/originals/a2/c7/f3/a2c7f37f72102396826492f1efadf054.gif">
     <title>Login</title>
 <!-- HAY QUE ARREGLAR LA BARRA QUE MUESTRA LA INFORMACIÓN, CORREGIR LOS BOTONES Y HACER EL VIEWS.PY-->
 <!-- ESTA LISTO EL TEMPLATE DE LOGIN Y EL TEMPLATE DE JUEGO, PERO FALTA ARREGLAR COSAS PEQUEÑAS-->
 </head>
-    <body style="background-image: url(https://wallpaperaccess.com/full/979426.jpg); background-size:100%; background-repeat:no-repeat">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity:0.8">
+    <body style="background-image: url(https://wallpaperaccess.com/full/630537.png); background-size:cover; background-position: center; background-repeat: no-repeat; min-height: 1000px;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity:0.9">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                 <img src="https://i.pinimg.com/originals/22/d7/5c/22d75c0d80de731413ef90c2e0fd8f95.gif" alt="" width="24" height="24" class="d-inline-block align-text-top"> {{request.session.name}} <span class="{% if request.session.hp <= 0 %} text-danger {% elif request.session.hp < 11 %} text-warning {% endif %} text-success fw-bold">{{request.session.hp}} HP</span></a>
                 <form action ="/reborn" method='POST'>
                     {% csrf_token %}
                     <input type="hidden">
-                    <button class="btn btn-danger my-2" type="submit">Reset</button>
+                    <button class="btn btn-outline-warning my-2" type="submit">Reset</button>
+                </form>
+                <form action ="/exit" method='POST'>
+                    {% csrf_token %}
+                    <input type="hidden">
+                    <button class="btn btn-outline-danger my-2" type="submit">Exit</button>
                 </form>
             </div>
         </nav>
         <div class="row m-3">
             <div class="col-2 justify-content-between my-3">
-                <div class="card bg-dark" style="opacity:0.8">
+                <div class="card bg-dark" style="opacity:0.9">
                     <img id="ruleta" src="https://media2.giphy.com/media/rrTXn4zEMp008/200.gif" class="card-img-top" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center text-light">Copy Ninja</h5>
-                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 10-20</span> HP</h5>
+                        <h5 class="text-center text-light">Take <span class="card-title fw-bold text-light" id="counter"> {{request.session.ninja1min}} - {{request.session.ninja1max}}</span> HP</h5>
                         <form action ="/process_money" method='POST'>
                             {% csrf_token %}
                             <input type="hidden" name="ninja" value="kakashi">
@@ -39,12 +44,12 @@
                 </div>
             </div>
             
-            <div class="col-2 justify-content-between my-3">
-                <div class="card bg-dark" style="opacity:0.8">
+            <div class="col-2 justify-content-center my-3">
+                <div class="card bg-dark" style="opacity:0.9">
                     <img id="ruleta" src="https://static.wikia.nocookie.net/jutsupedia/images/d/d2/Elemento_Fuego_Jutsu_Gran_Bola_de_Fuego.gif/revision/latest?cb=20120106141858&path-prefix=es" class="card-img-top" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center text-light">Fire Ball</h5>
-                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 05-10</span> HP</h5>
+                        <h5 class="text-center text-light">Take <span class="card-title fw-bold text-light" id="counter"> {{request.session.ninja2min}} - {{request.session.ninja2max}}</span> HP</h5>
                         <form action ="/process_money" method='POST'>
                             {% csrf_token %}
                             <input type="hidden" name="ninja" value="saske">
@@ -53,15 +58,19 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-8 float-end my-3 align-items-between" style="opacity:0.9">
+                <img id="ruleta" src="https://pbs.twimg.com/media/E0ft-L_WEAQzv81.jpg" style="height:24rem">
+            </div>
         </div>
 
         <div class="row m-3">
             <div class="col-2 justify-content-between my-3">
-                <div class="card bg-dark" style="opacity:0.8">
+                <div class="card bg-dark" style="opacity:0.9">
                     <img id="ruleta" src="https://static.wikia.nocookie.net/jutsupedia/images/5/58/Jutsu_Clon_de_Sombra.gif/revision/latest?cb=20120111144419&path-prefix=es" class="card-img-top" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center text-light">Shadow Clones</h5>
-                        <h5 class="text-center text-light">Earn <span class="card-title fw-bold text-success" id="counter"> 02-05</span> HP</h5>
+                        <h5 class="text-center text-light">Take <span class="card-title fw-bold text-light" id="counter"> {{request.session.ninja3min}} - {{request.session.ninja3max}}</span> HP</h5>
                         <form action ="/process_money" method='POST'>
                             {% csrf_token %}
                             <input type="hidden" name="ninja" value="naruto1">
@@ -72,11 +81,11 @@
             </div>
             
             <div class="col-2 justify-content-between my-3">
-                <div class="card bg-dark" style="opacity:0.8">
+                <div class="card bg-dark" style="opacity:0.9">
                     <img id="ruleta" src="https://media.tenor.com/images/2525d6f4776cdb2665c4a21e53d55cd9/tenor.gif" class="card-img-top" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center text-light">Jutsu Sexy</h5>
-                        <h5 class="text-center text-light">Earn/Take <span class="card-title fw-bold text-warning" id="counter"> 0-50</span> HP</h5>
+                        <h5 class="text-center text-light">Take<span class="card-title fw-bold text-light" id="counter"> {{request.session.ninja4min}} - {{request.session.ninja4max}}</span> HP</h5>
                         <form action ="/process_money" method='POST'>
                             {% csrf_token %}
                             <input type="hidden" name="ninja" value="naruto2">
@@ -86,12 +95,12 @@
                 </div>
             </div>
 
-            <div class="col-8 float-end my-3" style="opacity:0.8">
+            <div class="col-8 float-end my-3" style="opacity:0.9">
                 <div class="card">
                     <h4 class="card-title bg-light text-dark text-center m-0 py-2">Information Register</h4>
-                    <div data-bs-spy="scroll" class="card-body bg-light" style="height: 300px; overflow-y: scroll" id="actions">
+                    <div data-bs-spy="scroll" class="card-body bg-light" style="height: 21rem; overflow-y: scroll" id="actions">
                         {% for message in request.session.messages %}
-                            <h5 class="text-dark">{{message}} </h5>
+                            <h5 class="text-{{message.color}}">{{message.message}} </h5>
                         {% endfor %}
                     </div>
                 </div>
