--- a/ninja_gold/templates/ninja_login.html
+++ b/ninja_gold/templates/ninja_login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="shortcut icon" href="favicon.png">
-    <title>Login</title>
+    <link rel="icon"  type="image/gif" href="https://i.pinimg.com/originals/a2/c7/f3/a2c7f37f72102396826492f1efadf054.gif">
+    <title>Ninja Login</title>
 
 </head>
     <body style="background-image: url(https://pavbca.com/walldb/original/3/8/e/271057.jpg); background-size:100%; background-repeat:no-repeat">
@@ -32,7 +32,7 @@
                         <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label text-dark fs-4">Password</label>
+                        <label for="password" class="form-label text-dark fs-4">Password</label>
                         <input type="password" class="form-control" name="clave">
                     </div>
                     <input type="submit" class="btn btn-primary my-2 text-center">
